# pliny

./: .gitignore  .venv  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONSTITUTION.md  INSTALL.md  LICENSE  LOOM.md  LOOM_CHANGELOG.md  LOOM_CONTEXT.md  LOOM_ROADMAP.md  LOOM_ZERO_HYPOTHESIS.md  PROTOCOL.md  README.md  SKILL.md  adrgen.config.yml  gemini-bootstrap.md  gemini-extension.json  package.json  pyproject.toml  results.tsv
loom-mill/: README.md  pyproject.toml
loom-mill/.mill/chat-sessions/: 06353579.json  2db75481.json  608888e2.json  917aab58.json
loom-mill/frontend/: .env.development  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
loom-mill/frontend/src/: App.svelte  app.css
loom-mill/frontend/src/lib/: AndonBoard.svelte  Changelog.svelte  CommandPalette.svelte  ConnectionBanner.svelte  DetailPanel.svelte  DiffViewer.svelte  FactoryFloor.svelte  GitPanel.svelte  HarnessConfig.svelte  IterationsTab.svelte  LogViewer.svelte  MetadataBadges.svelte  Metrics.svelte  ModeSwitch.svelte  NotificationCenter.svelte  Pipeline.svelte  Playback.svelte  ReadyTicketRow.svelte  RecordRenderer.svelte  ReviewActions.svelte  SettingsDrawer.svelte  StatusBar.svelte  ThemeToggle.svelte  TicketCard.svelte  TicketRow.svelte  Toast.svelte  api.ts  types.ts  (+6 more)
loom-mill/src/loom_mill/: __init__.py  app.py  dev.py
loom-mill/tests/: test_canvas_parser.py  test_design_api.py  test_iterations.py  test_multi_workstation.py  test_parser.py  test_records_api.py  test_scheduling.py  test_shaping_engine.py  test_shaping_harness.py  test_shaping_integration.py  test_shaping_models.py  test_shaping_ops_parser.py  test_shaping_prompts.py  test_shaping_serialize.py  test_shaping_session.py  test_shaping_staging.py  test_shipping.py  test_workstation_engine.py
(+3285 files in other folders)
